--- a/src/components/Sidebar/Sidebar.css
+++ b/src/components/Sidebar/Sidebar.css
@@ -1,48 +1,92 @@
-.sidebar{
-    height: 100vh;
-    width: 30%;
-    position: relative;
+.sidebar {
+  height: 100vh;
+  width: 25%;
+  position: relative;
 }
 
-.title{
-    height: 15%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.title {
+  height: 15%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.title > p{
-    font-size: 35px;
-    font-weight: 500;
-    line-height: 41px;
-    letter-spacing: 2%;
-    color: black;
-    text-align: center;
+.title > p {
+  font-size: 35px;
+  font-weight: 500;
+  line-height: 41px;
+  letter-spacing: 2%;
+  color: black;
+  text-align: center;
 }
 
-.notes-group-list{
-    width: 100%;
-    height: 85%;
-    overflow: auto;
+.notes-group-list {
+  width: 100%;
+  height: 85%;
+  overflow: auto;
 }
-/* .group-list{
-    height: 100vh;
-} */
 
-.add-icon{
-    height: 93px;
-    width: 93px;
-    background-color: #16008B;
-    border-radius: 50%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: white;
-    font-size: 70px;
-    font-weight: 500;
-    position: absolute;
-    bottom: 60px;
-    z-index: 9;
-    right: 40px;
-    cursor: pointer;
+.notes-group-list::-webkit-scrollbar {
+  background-color: #d9d9d9;
+  width: 10px;
+  border-radius: 5.5px;
+}
+.notes-group-list::-webkit-scrollbar-thumb {
+    background-color: white;
+    border-radius: 4.5px;
+    width: 8px;
+    border: 2px solid transparent;
+    background-clip: content-box;
+}
+
+.add-icon {
+  height: 93px;
+  width: 93px;
+  background-color: #16008b;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  font-size: 70px;
+  font-weight: 500;
+  position: absolute;
+  bottom: 60px;
+  z-index: 9;
+  right: 40px;
+  cursor: pointer;
+}
+.group {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  padding: 20px;
+  border-radius: 16px;
+  cursor: pointer;
+  transition: .2s linear;
+}
+.group:hover{
+    background-color: #2f2f2f2b;
+}
+.active-group{
+    background-color: #2f2f2f2b;
+}
+.group-icon {
+  width: 68.9px;
+  height: 68.9px;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 24px;
+  color: white;
+  letter-spacing: 2%;
+  margin: 0 20px;
+}
+.group-title {
+  color: black;
+  font-size: 24px;
+  font-weight: 500;
+  letter-spacing: 2%;
+  line-height: 28.13px;
 }
