style: Made sidebar and static main page responsive for normal desktop screen sizes

--- a/src/components/StaticMainSection/StaticMainPage.css
+++ b/src/components/StaticMainSection/StaticMainPage.css
@@ -33,3 +33,15 @@
     font-size: 22px;
     line-height: 32px;
 }
+
+@media only screen and (max-width: 1535px) {
+    .static-main-page{
+      width: 70%;
+    }
+    .static-main-page p:nth-child(2){
+        font-size: 40px;
+    }
+    .static-main-page p:nth-child(3){
+        margin-bottom: 130px;
+    }
+  }
