--- a/src/components/Sidebar/Sidebar.css
+++ b/src/components/Sidebar/Sidebar.css
@@ -5,7 +5,7 @@
 }
 
 .title {
-  height: 15%;
+  height: 18%;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -22,7 +22,7 @@
 
 .notes-group-list {
   width: 100%;
-  height: 85%;
+  height: 82%;
   overflow: auto;
 }
 
@@ -65,9 +65,9 @@
   cursor: pointer;
   transition: .2s linear;
 }
-.group:hover{
+/* .group:hover{
     background-color: #2f2f2f2b;
-}
+} */
 .active-group{
     background-color: #2f2f2f2b;
 }
@@ -89,4 +89,26 @@
   font-weight: 500;
   letter-spacing: 2%;
   line-height: 28.13px;
+}
+
+@media only screen and (max-width: 1535px) {
+  .sidebar{
+    width: 30%;
+  }
+  .group{
+    padding: 15px;
+  }
+  .group-title{
+    font-size: 22px;
+  }
+  .group-icon{
+    font-size: 22px;
+    width: 64.9px;
+    height: 64.9px;
+  }
+  .add-icon{
+    width: 80px;
+    height: 80px;
+    bottom: 45px;
+  }
 }
