--- a/src/components/NoteSection/NoteSection.css
+++ b/src/components/NoteSection/NoteSection.css
@@ -41,42 +41,42 @@ nav {
   overflow-y: auto;
   padding: 20px 40px;
 }
-.notes-display::-webkit-scrollbar{
-    background-color: #000000A1;
-    border-radius: 5.5px;
-    width: 10px;
+.notes-display::-webkit-scrollbar {
+  background-color: #000000a1;
+  border-radius: 5.5px;
+  width: 10px;
 }
-.notes-display::-webkit-scrollbar-thumb{
-    width: 8px;
-    border-radius: 4.5px;
-    background-color: #fff;
-    border: 1px solid transparent;
-    background-clip: content-box;
+.notes-display::-webkit-scrollbar-thumb {
+  width: 8px;
+  border-radius: 4.5px;
+  background-color: #fff;
+  border: 1px solid transparent;
+  background-clip: content-box;
 }
-.note{
-    background-color: white;
-    padding: 20px 30px 12px 20px;
-    display: flex;
-    flex-direction: column;
-    border-radius: 5px;
-    box-shadow: 0px 4px 20px 0px #00000040;
-    margin-bottom: 20px;
+.note {
+  background-color: white;
+  padding: 20px 30px 12px 20px;
+  display: flex;
+  flex-direction: column;
+  border-radius: 5px;
+  box-shadow: 0px 4px 20px 0px #00000040;
+  margin-bottom: 20px;
 }
-.note-text{
-    font-size: 18px;
-    line-height: 28.83px;
-    letter-spacing: 3.5%;
-    color: black;
+.note-text {
+  font-size: 18px;
+  line-height: 28.83px;
+  letter-spacing: 3.5%;
+  color: black;
 }
-.timestamp{
-    display: flex;
-    justify-content: end;
-    width: 100%;
-    margin-top: 20px;
-    font-size: 18px;
-    font-weight: 500;
-    line-height: 17.58px;
-    letter-spacing: 2%;
+.timestamp {
+  display: flex;
+  justify-content: end;
+  width: 100%;
+  margin-top: 20px;
+  font-size: 18px;
+  font-weight: 500;
+  line-height: 17.58px;
+  letter-spacing: 2%;
 }
 
 .create-note-form {
@@ -86,48 +86,73 @@ nav {
   padding: 20px 30px;
   width: 100%;
 }
-.note-form{
-    background-color: white;
-    height: 100%;
-    border-radius: 9px;
-    overflow: hidden;
+.note-form {
+  background-color: white;
+  height: 100%;
+  border-radius: 9px;
+  overflow: hidden;
 }
-.note-form > textarea{
-    min-height: 75%;
-    min-width: 100%;
-    resize: none;
-    overflow: auto;
-    font-size: 29.82px;
-    color: #9A9A9A;
-    border: none;
-    outline: none;
-    padding: 20px 25px;
-    line-height: 34.94px;
-    letter-spacing: 2%;
+.note-form > textarea {
+  min-height: 75%;
+  min-width: 100%;
+  resize: none;
+  overflow: auto;
+  font-size: 29.82px;
+  color: #9a9a9a;
+  border: none;
+  outline: none;
+  padding: 20px 25px;
+  line-height: 34.94px;
+  letter-spacing: 2%;
 }
-.note-form > textarea::placeholder{
-    color: #9A9A9A;
+.note-form > textarea::placeholder {
+  color: #9a9a9a;
 }
-.note-form > textarea::-webkit-scrollbar{
-    width: 10px;
-    background-color: #D9D9D9;
-    border-radius: 9px;
+.note-form > textarea::-webkit-scrollbar {
+  width: 10px;
+  background-color: #d9d9d9;
+  border-radius: 9px;
 }
-.note-form > textarea::-webkit-scrollbar-thumb{
-    background-color: white;
-    border-radius: 6px;
-    width: 8px;
-    border: 2px solid transparent;
-    background-clip: content-box;
+.note-form > textarea::-webkit-scrollbar-thumb {
+  background-color: white;
+  border-radius: 6px;
+  width: 8px;
+  border: 2px solid transparent;
+  background-clip: content-box;
 }
-.submit-btn{
-    display: flex;
-    justify-content: end;
+.submit-btn {
+  display: flex;
+  justify-content: end;
 }
-.submit-btn button{
-    cursor: pointer;
-    background-color: transparent;
-    outline: none;
-    border: none;
-    margin-right: 30px;
+.submit-btn button {
+  cursor: pointer;
+  background-color: transparent;
+  outline: none;
+  border: none;
+  margin-right: 30px;
+}
+
+@media only screen and (max-width: 1535px) {
+  nav {
+    height: 75px;
+    min-height: 75px;
+  }
+  .nav-icon {
+    width: 50.9px;
+    height: 50.9px;
+    font-size: 20px;
+  }
+  .nav-title{
+    font-size: 22px;
+  }
+  .notes-display{
+    padding: 20px 30px;
+  }
+  .create-note-form{
+    height: 230px;
+    min-height: 230px;
+  }
+  .note-form > textarea{
+    font-size: 24px;
+  }
 }
