--- a/src/components/CreateGroup/Modal.css
+++ b/src/components/CreateGroup/Modal.css
@@ -13,7 +13,7 @@
     width: 740px;
     background-color: white;
     border-radius: 6px;
-    padding: 30px 30px 15px
+    padding: 30px 30px 15px;
 }
 .create-box > p{
     font-size: 29px;
@@ -43,6 +43,7 @@
     width: 435px;
     outline: none;
     color: #292929;
+    letter-spacing: 3.5%;
 }
 .create-input > input::placeholder{
     color: #979797;
@@ -88,4 +89,60 @@
     height: 38px;
     border: none;
     cursor: pointer;
+}
+
+@media only screen and (max-width: 768px){
+    .create-box{
+        width: 284px;
+        padding: 20px;
+    }
+    .create-box > p{
+        font-size: 18.4px;
+        line-height: 29.47px;
+        letter-spacing: 3.5%;
+        margin: 0;
+    }
+    .create-input{
+        margin: 20px 0;
+    }
+    .create-input > label{
+        font-size: 14.6px;
+        line-height: 23.39px;
+    }
+    .create-input > input{
+        width: 150px;
+        padding: 6px 12px;
+        font-size: 11px;
+        margin-left: 10px;
+        line-height: 16.02px;
+        border: 0.88px solid #cccccc;
+    }
+    .choose-colors{
+        margin: 0;
+        display: flex;
+        align-items: center;
+    }
+    .choose-colors > span{
+        font-size: 14.6px;
+        line-height: 23.39px;
+    }
+    .color-options{
+        margin-left: 10px;
+    }
+    .color-options button{
+        width: 17.67px;
+        height: 17.67px;
+        margin-top: 5px;
+        margin-right: 5px;
+    }
+    .create-btn-section{
+        justify-content: center;
+    }
+    .create-button{
+        width: 186px;
+        height: 32px;
+        border-radius: 6px;
+        font-size: 17px;
+        line-height: 27.23px;
+    }
 }
