fix: fixed a util function, style: fixed style issue

--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,9 @@
     box-sizing: border-box;
     font-family: 'Roboto', sans-serif;
 }
+html{
+  height: 100%;
+}
 .app{
     width: 100%;
     height: 100vh;
