--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,7 @@ html{
 }
 .app{
     width: 100%;
-    height: 100vh;
+    height: calc(var(--vh, 1vh) * 100);
     overflow: auto;
     display: flex;
     position: relative;
